# src/modules/pizzas/model/Crust.ts
@@ -1,0 +1,7 @@
+class Crust {
+    name: string;
+    price: number;
+
+}
+
+export { Crust };
