# src/routes/crusts.routes.ts
@@ -1,0 +1,15 @@
+import { Router } from "express";
+import { createCrustController } from "../modules/pizzas/useCases/createCrust";
+import { listCrustsController } from "../modules/pizzas/useCases/listCrusts";
+
+const crustsRoutes = Router();
+
+crustsRoutes.post("/", (request, response) => {
+    return createCrustController.handle(request, response);
+});
+
+crustsRoutes.get("/", (request, response) => {
+    return listCrustsController.handle(request, response);
+})
+
+export { crustsRoutes }
